--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilos base */
+:root {
+  --max-width: 1440px;
+  --container-padding: 1rem;
+}
+
+/* Estilos responsive */
+@media (min-width: 640px) {
+  :root {
+    --container-padding: 2rem;
+  }
+}
+
+/* Contenedor principal */
+.container {
+  max-width: var(--max-width);
+  padding-left: var(--container-padding); 
+  padding-right: var(--container-padding);
+  margin: 0 auto;
+  width: 100%;
+}
+
 html, body {
   @apply min-h-screen;
   background-color: var(--tw-bg-opacity);
